remove unncessary css; fix spacing on add form

--- a/server/public/css/boardview.css
+++ b/server/public/css/boardview.css
@@ -31,10 +31,6 @@
   border: 0.5px solid #292929;
 }
 
-.col-icon {
-  font-size: 22px;
-}
-
 .col-btn:hover {
   border: 0.5px solid #292929;
 }
