--- a/server/public/css/components.css
+++ b/server/public/css/components.css
@@ -4,22 +4,8 @@
   z-index: 2;
 }
 
-.label-input {
-  margin-bottom: 20px;
-}
-
 .add-btns-container {
   justify-content: space-between;
-}
-
-/* .task-col-title {
-  margin: 10px 0;
-} */
-
-.task-name-input {
-  border: 2px solid #1db9c3;
-  margin-left: 10px;
-  color: #292929;
 }
 
 .description-input {
@@ -148,11 +134,6 @@
   background-color: white;
 }
 
-.color-list {
-  list-style-type: none;
-  padding: 0;
-}
-
 .color-btn {
   width: 100px;
   height: 20px;
@@ -169,31 +150,10 @@
   margin-bottom: 15px;
 }
 
-.label-item {
-  width: 75px;
-}
-
-.tag-text-input {
-  border: 2px solid #1db9c3;
-  color: #292929;
-  width: 150px;
-}
-
 .tag-section {
   justify-content: flex-start;
   width: 100%;
   align-items: center;
-  margin: 10px;
-}
-
-.add-tag-btn {
-  width: 40px;
-  height: 25px;
-  margin-left: 10px;
-}
-
-.add-tag-btn:active {
-  transform: translateY(0.25rem);
 }
 
 .remove-tag-btn {
@@ -201,19 +161,6 @@
   width: 15px;
   height: 15px;
   left: 100%;
-
-  /* bottom: 90%; */
   border: none;
   font-size: 12px;
-}
-
-.delete-tag-btn {
-  background-color: white;
-  font-size: 12px;
-  border: none;
-  margin-left: 2px;
-}
-
-.delete-tag-btn:active {
-  transform: translateY(0.25rem);
 }
